--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_Variables.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_Variables.less
@@ -17,7 +17,7 @@
 @highlight-zone: #FFB414;
 @highlight-widget: #7FB903;
 @highlight-content-item: #00A2E3;
-@highlight-other: #F8531B;
+@highlight-other:lighten( #F8531B,25);
 
 // annotations
 @annotation-font-size: 14px;
