--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_TraceThemeControls.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_TraceThemeControls.less
@@ -13,7 +13,7 @@
     z-index: @massive-z-index;
 
     & > form {
-        .opacity(.1);
+        .opacity(@control-bar-form-opacity);
         background: @control-bar-form-background;
         border: @control-bar-form-border;
         border-radius: @border-radius;
