--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_Variables.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Styles/less/_Variables.less
@@ -8,6 +8,7 @@
 @control-bar-form-background: #00A2E3;
 @control-bar-form-border: 1px solid darken(@control-bar-form-background, 25);
 @control-bar-form-padding: 5px;
+@control-bar-form-opacity:0.025;
 
 // topography
 @topography-base-color: black;
@@ -17,7 +18,7 @@
 @highlight-zone: #FFB414;
 @highlight-widget: #7FB903;
 @highlight-content-item: #00A2E3;
-@highlight-other:lighten( #F8531B,25);
+@highlight-other:lighten(#F8531B,25);
 
 // annotations
 @annotation-font-size: 14px;
