--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Views/Layout.cshtml
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Views/Layout.cshtml
@@ -14,6 +14,7 @@
     SetMeta(httpEquiv: "X-UA-Compatible", content: "IE=edge,chrome=1");
     Script.Require("jQuery").AtFoot();
     Script.Include("//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js").AtFoot();
+    Script.Include("theme.js").AtFoot();
     Style.Include("//fonts.googleapis.com/css?family=Lobster&subset=latin");
     Style.Include("//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css");
     Style.Include("site.css");
