Add new Bootstrap_3_1_1 module.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Site.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Site.less
@@ -1,4 +1,5 @@
 ﻿@import 'Less/Bootstrap/bootstrap.less';
 @import 'Less/Site/_TheThemeMachine-Bootstrap-Mixins.less';
 @import 'Less/Site/_TheThemeMachine-Bootstrap-Navigation.less';
-@import 'Less/Site/_TheThemeMachine-Bootstrap-Scaffolding.less'; 
+@import 'Less/Site/_TheThemeMachine-Bootstrap-Thumbnails.less';
+@import 'Less/Site/_TheThemeMachine-Bootstrap-Scaffolding.less'; // this is SLOW to build
