--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/Vandelay.Industries/Styles/admin-custom-sort.css
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/Vandelay.Industries/Styles/admin-custom-sort.css
@@ -1,4 +1,4 @@
-﻿#results > li,
+#results > li,
 #pinned-items > li {
   display: inline-block;
   position: relative;
@@ -70,3 +70,4 @@
   display: inline;
   margin: 4px;
 }
+/*# sourceMappingURL=admin-custom-sort.css.map */
