--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/Orchard.Azure.MediaServices/Styles/cloudmedia-admin-asset.css
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/Orchard.Azure.MediaServices/Styles/cloudmedia-admin-asset.css
@@ -40,3 +40,4 @@ section.commands {
 .jstree-default .jstree-anchor > .jstree-themeicon-custom.audiotrack {
   background-position: -195px -66px;
 }
+/*# sourceMappingURL=cloudmedia-admin-asset.css.map */
