--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/Orchard.Azure.MediaServices/Styles/cloudmedia-progress.css
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/Orchard.Azure.MediaServices/Styles/cloudmedia-progress.css
@@ -1,4 +1,4 @@
-﻿.progress-bar {
+.progress-bar {
   width: 180px;
   height: 1em;
   background-color: #dce7c7;
@@ -8,3 +8,4 @@
   background-color: #809f43;
   width: 0;
 }
+/*# sourceMappingURL=cloudmedia-progress.css.map */
