Don't show the gallery field's name.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/Bootstrap_3_1_1/Views/Fields/MediaLibraryPicker.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/Bootstrap_3_1_1/Views/Fields/MediaLibraryPicker.cshtml
@@ -4,6 +4,7 @@
 
 @{
     var field = (MediaLibraryPickerField) Model.ContentField;
+    string name = field.DisplayName;
     var contents = field.MediaParts;
 }
 <section class="media-library-picker-field media-library-picker-field-@name.HtmlClassify()">
