--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Site.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Site.less
@@ -1,4 +1,13 @@
-﻿@import 'Less/Bootstrap/bootstrap.less';
-@import 'Less/Site/_TheThemeMachine-Bootstrap-Mixins.less';
-@import 'Less/Site/_TheThemeMachine-Bootstrap-Navigation.less';
-@import 'Less/Site/_TheThemeMachine-Bootstrap-Scaffolding.less'; // this is SLOW to build
+﻿
+// bootstrap
+@import 'Bootstrap/Less/variables.less';
+@import 'Bootstrap/Less/mixins.less';
+@import 'Bootstrap/Less/utilities.less';
+@import 'Bootstrap/Less/grid.less';
+@import 'Bootstrap/Less/forms.less';
+@import 'Bootstrap/Less/navbar.less';
+
+// base theme
+@import 'Site/Less/_TheThemeMachine-Bootstrap-Mixins.less';
+@import 'Site/Less/_TheThemeMachine-Bootstrap-Navigation.less';
+@import 'Site/Less/_TheThemeMachine-Bootstrap-Scaffolding.less'; // this is SLOW to build
