--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/BigFont.Bootstrap.Components/Views/Widget-BootstrapAffixSubnav.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/BigFont.Bootstrap.Components/Views/Widget-BootstrapAffixSubnav.cshtml
@@ -1,7 +1,11 @@
-﻿<nav data-offset-top="0" data-spy="affix">
+﻿@{
+    var model = Model;
+}
+<nav data-offset-top="0" data-spy="affix">
     <ul class="nav nav-list nav-stacked">
         <li>This will be the internal navigation.</li>
         <li>We need to populate it with the subnavigation items.</li>
         <li>How will we do that?</li>
+        <li>Maybe we can add a boolean field to all widgets called "show on subnav"</li>
     </ul>
 </nav>
