--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/BigFont.Bootstrap.Components/Views/Widget-BootstrapAffixSubnav.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/BigFont.Bootstrap.Components/Views/Widget-BootstrapAffixSubnav.cshtml
@@ -5,7 +5,8 @@
     <ul class="nav nav-list nav-stacked">
         <li>This will be the internal navigation.</li>
         <li>We need to populate it with the subnavigation items.</li>
-        <li>How will we do that?</li>
+        <li>How will we do that? Ideas: </li>
         <li>Maybe we can add a boolean field to all widgets called "show on subnav"</li>
+        <li>Maybe we can just get a list of all widgets.</li>
     </ul>
 </nav>
