Start on the bootstrap affix subnav menu item.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/BigFont.Bootstrap.Components/Views/Widget-BootstrapAffixSubnav.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/BigFont.Bootstrap.Components/Views/Widget-BootstrapAffixSubnav.cshtml
@@ -8,5 +8,6 @@
         <li>How will we do that? Ideas: </li>
         <li>Maybe we can add a boolean field to all widgets called "show on subnav"</li>
         <li>Maybe we can just get a list of all widgets.</li>
+        <li>Alternatively, we would use jQuery to get headers.</li>
     </ul>
 </nav>
