--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/Views/EditorTemplates/Parts/HighlightableItemPart.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/Views/EditorTemplates/Parts/HighlightableItemPart.cshtml
@@ -1,16 +1,27 @@
 ﻿@model LccNetwork.Models.HighlightableItemPart
 
+@{
+    var containingType = Model.ContentItem.ContentType;
+    var friendlyContainingType = Model.ContentItem.TypeDefinition.DisplayName;
+
+    var highlightOptions = new List<SelectListItem>();
+    highlightOptions.Add(new SelectListItem() { Value = "All", Text = "All" });
+    highlightOptions.Add(new SelectListItem() { Value = containingType, Text = friendlyContainingType });
+    
+}
+
 @if (!Model.IsHighlighted)
 {
     <fieldset>
         <span class="checkbox-and-label">
             @Html.EditorFor(m => m.IsHighlighted)
-            <label for="@Html.FieldIdFor(m => m.IsHighlighted)" class="forcheckbox">@T("Set as a highlighted")</label>
+            <label for="@Html.FieldIdFor(m => m.IsHighlighted)" class="forcheckbox">@T("Set as the highlighted item for: ")</label>
         </span>
-        <span class="hint">@T("Check to promote this content as a highlighted item")</span>
+        @Html.DropDownListFor(m => m.HighlightGroup, highlightOptions)
+        <span class="hint">@T("Check to promote this content as a highlighted item.")</span>
     </fieldset>
 }
 else
 {
-    <span>@T("This content is the current home page")</span>
+    <span>@T("This is the featured item for {0} content.", Model.HighlightGroup)</span>    
 }
