--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/Views/Content.Highlight.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/Views/Content.Highlight.cshtml
@@ -1,11 +1,25 @@
-﻿@*@foreach (var part in Model.ContentItem.Parts)
+﻿@using Orchard.Utility.Extensions;
+@{
+    var contentTypeClassName = ((string)Model.ContentItem.ContentType).HtmlClassify();
+    Model.Classes.Add(contentTypeClassName);
+
+    var tag = Tag(Model, "article");
+}
+@tag.StartElement
+<header>
+    @Display(Model.Header)
+    @if (Model.Meta != null)
     {
-        var type = part.GetType();
-        <p>@type.Name</p>
-    }*@
-
-<h1>@Model.ContentItem.TitlePart.Title</h1>
-<div>
-    @Html.Raw(@Model.ContentItem.BodyPart.Text)
-</div>
-
+        <div class="metadata">
+            @Display(Model.Meta)
+        </div>
+    }
+</header>
+@Display(Model.Content)
+@if (Model.Footer != null)
+{
+    <footer>
+        @Display(Model.Footer)
+    </footer>
+}
+@tag.EndElement
