Add top condition to section menu.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/Views/Parts/MenuWidget-SectionMenu.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/Views/Parts/MenuWidget-SectionMenu.cshtml
@@ -30,7 +30,7 @@
 <div>
     <h1>@selectedMenuItem.Text</h1>
     @tag.StartElement
-    @RenderMenuItem(selectedMenuItem)
+    @RenderMenuItem(selectedMenuItem,true)
     @foreach (var i in subItems)
     {
         @RenderMenuItem(i)        
