--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/Views/Parts/MenuWidget-SectionMenu.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/LccNetwork/Views/Parts/MenuWidget-SectionMenu.cshtml
@@ -5,7 +5,7 @@
 {
     TextInfo textInfo = new CultureInfo("en-US", false).TextInfo;
     MenuItem item = shape.Item as MenuItem;
-    var text = top ?         
+    var text = top ?
         textInfo.ToTitleCase(item.Href.Substring(1)) : // use the Href
         item.Text.Text;
     var href = item.Href;
@@ -24,20 +24,22 @@
     var items = (IList<dynamic>)Enumerable.Cast<dynamic>(menu.Items);
 
     // get the first, selected, top level item
-    var selectedMenuItem = items.First(i => i.Item.Selected);
+    var selectedMenuItem = items.FirstOrDefault(i => i.Item.Selected);
 
-    // check if any of its children are selected
-    var subItems = (IList<dynamic>)Enumerable.Cast<dynamic>(selectedMenuItem.Items);
-    selectedMenuItem.Selected = !subItems.Any(i => i.Selected);
-}
-
-<div>
-    <h1>@selectedMenuItem.Text</h1>
-    @tag.StartElement
-    @RenderMenuItem(selectedMenuItem,true)
-    @foreach (var i in subItems)
+    if (selectedMenuItem != null)
     {
-        @RenderMenuItem(i)        
+        // check if any of its children are selected
+        var subItems = (IList<dynamic>)Enumerable.Cast<dynamic>(selectedMenuItem.Items);
+        selectedMenuItem.Selected = !subItems.Any(i => i.Selected);
+        <div>
+            <h1>@selectedMenuItem.Text</h1>
+            @tag.StartElement
+            @RenderMenuItem(selectedMenuItem, true)
+            @foreach (var i in subItems)
+            {
+                @RenderMenuItem(i)
+            }
+            @tag.EndElement
+        </div>
     }
-    @tag.EndElement
-</div>
+}
