Use require instead of include.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Views/Layout.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Views/Layout.cshtml
@@ -13,7 +13,7 @@
 
     SetMeta(httpEquiv: "X-UA-Compatible", content: "IE=edge,chrome=1");
     Script.Require("jQuery").AtFoot();
-    Script.Include("Bootstrap").AtFoot();
+    Script.Require("Bootstrap").AtFoot();
     Script.Include("theme.js").AtFoot();
     Style.Include("//fonts.googleapis.com/css?family=Lobster&subset=latin");
     Style.Require("Bootstrap");
