--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Site/less/_TheThemeMachine-Bootstrap-Scaffolding.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Styles/Site/less/_TheThemeMachine-Bootstrap-Scaffolding.less
@@ -34,6 +34,12 @@
         .make-md-column(12);
     }
     /*switch: layout-main*/
+    & {
+        #layout-content {
+            .make-md-column(12);
+        }
+    }
+
     &.aside-12 {
         #layout-content {
             .make-md-column(6);
