--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/WorkItemCarousel.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/WorkItemCarousel.cshtml
@@ -8,18 +8,22 @@
     {
         dynamic carouselItem = new System.Dynamic.ExpandoObject();
         dynamic workItemPart = contentItem.WorkItem;
-        
+
         // learn more link field
-        var learnMore = workItemPart.LearnMoreField;
-        carouselItem.LearnMoreText = learnMore.Text;
-        carouselItem.LearnMoreValue = learnMore.Value;
+        carouselItem.LearnMore = new
+        {
+            Text = workItemPart.LearnMoreField.Text,
+            Value = workItemPart.LearnMoreField.Value
+        };
         // summary text field
-        var summary = workItemPart.Summary;
-        carouselItem.SummaryValue = summary.Value;
+        carouselItem.SummaryValue = workItemPart.Summary.Value;
         // work area taxonomy term field
         var workArea = workItemPart.Area.Terms[0];
-        carouselItem.WorkAreaTerm = workArea.Name;
-        carouselItem.WorkAreaSlug = workArea.Slug;
+        carouselItem.WorkArea = new
+        {
+            Term = workArea.Name,
+            Slug = workArea.Slug
+        };
         // title part
         carouselItem.title = contentItem.TitlePart.Title;
         // media library picker field
@@ -27,11 +31,14 @@
             workItemPart.Image != null &&
             workItemPart.Image.MediaParts != null &&
             workItemPart.Image.MediaParts.Count > 0 ? workItemPart.Image.MediaParts[0] : null;
-        carouselItem.ImgAlt = mediaPart != null ? mediaPart.AlternateText : null;
-        carouselItem.ImgSrc = mediaPart != null ? mediaPart.MediaUrl : null;
+        carouselItem.Img = new
+        {
+            Alt = mediaPart != null ? mediaPart.AlternateText : null,
+            Src = mediaPart != null ? mediaPart.MediaUrl : null
+        };
 
         // ensure that we only display one item per work area
-        if (processedWorkAreas.Any(s => s.Equals(carouselItem.WorkAreaTerm)))
+        if (processedWorkAreas.Any(s => s.Equals(carouselItem.WorkArea.Term)))
         {
             continue;
         }
@@ -42,7 +49,7 @@
             continue;
         }
 
-        processedWorkAreas.Add(carouselItem.WorkAreaTerm);
+        processedWorkAreas.Add(carouselItem.WorkArea.Term);
         carouselItems.Add(carouselItem);
     }
 }
@@ -54,12 +61,12 @@
         {
             var item = items[i];
             <div class="item @(i == 0 ? "active" : string.Empty)">
-                <img src="@Display.ResizeMediaUrl(Width: width, Height: height, Mode: "crop", Alignment: "middlecenter", Path: item.ImgSrc)"
-                     alt="@item.ImgAlt">
+                <img src="@Display.ResizeMediaUrl(Width: width, Height: height, Mode: "crop", Alignment: "middlecenter", Path: item.Img.Src)"
+                     alt="@item.Img.Alt">
                 <div class="carousel-caption">
-                    <h3><a href="@item.WorkAreaSlug">@item.WorkAreaTerm</a></h3>
+                    <h3><a href="@item.WorkArea.Slug">@item.WorkArea.Term</a></h3>
                     @Html.Raw(item.SummaryValue)
-                    <a href="@item.LearnMoreValue">@item.LearnMoreText</a>
+                    <a href="@item.LearnMore.Value">@item.LearnMore.Text</a>
                 </div>
             </div>
         }
@@ -73,8 +80,8 @@
         {
             var item = items[i];
             <div data-target="#@carouselUniqueId" data-slide-to="@i" class="@(i == 0 ? "active" : string.Empty)">
-                <img src="@Display.ResizeMediaUrl(Width: width, Height: height, Mode: "crop", Alignment: "middlecenter", Path: item.ImgSrc)"
-                     alt="@item.ImgAlt">
+                <img src="@Display.ResizeMediaUrl(Width: width, Height: height, Mode: "crop", Alignment: "middlecenter", Path: item.Img.Src)"
+                     alt="@item.Img.Alt">
             </div>
         }
     </div>
